review feedback: use ProcessTools.createTestJavaProcessBuilder